Add more qualifications about block versus drive failure rates. Start on the how-to scenarios.  Most of them are either simple or a swamp. Add to TODO list improved reporting requirements.

--- a/PaperDraft/howmany.htm
+++ b/PaperDraft/howmany.htm
@@ -35,7 +35,8 @@ border-collapse: collapse;
 </blockquote>
 <h1 id="motivation">Motivation</h1>
 <ul>
-<li>Information production is rapidly increasing</li>
+<li>Information production is rapidly increasing.</li>
+<li>The vast majority of the world's data is stored on rotating disks, 90% in 2007 and not changing very rapidly.</li>
 <li>Digital store changes the goal of preservation, from maintaining a constant optimal environment to continual curation in order to maintain understanding.</li>
 <li>Information systems designed for immediate use, not long term access and understanding. Much information at risk.</li>
 <li>Changing economics of digital production makes it difficult for any one institution to safeguard everything it uses.</li>
@@ -174,17 +175,19 @@ end of outline area -->
 </ul>
 <p>The region of error rates that we investigate generates enough errors to evaluate the impact of storing multiple copies and the impact of various auditing strategies. Our conclusions describe storage and auditing strategies that are robust over very wide ranges of error rates (and the corresponding ranges of bit/block/disk lifetimes), spanning approximately four orders of magnitude.</p>
 <p>The supplementary material includes comparisons of theoretical and empirically observed loss rates for a wide range of error rates. The theoretical figures are based on simple independent Poisson arrivals of document failures, based on sector lifetime, sector size, document size, and simulation length. Empirical numbers are derived from repeated runs of simulations with the stated parameters, with simple document aging and no auditing. Even with very small samples (twenty runs) the empirical numbers agree very well with the theoretical predictions.</p>
-<h3 id="error-rates-expressed-as-mtbf-mttf">Error Rates Expressed as MTBF, MTTF</h3>
+<h3 id="relationship-of-mtbfmttf-to-block-error-rates">Relationship of MTBF/MTTF to Block Error Rates</h3>
 <p>The inverse of error rate is usually expressed in terms of MTBF or MTTF, and, initially, we expressed all parameters as mean exponential lifetime. But MTBF and MTTF are hard even for most experts to grasp, and uninformative or misleading for non-experts.</p>
 <p>The disk manufacturing industry tends to express the device lifetime as MTBF or MTTF. This is an expected (mean) exponential lifetime for the <em>device</em>, but that does not give much information about the lifetime of data in individual files, blocks, or bits on the disk. There are several layers of error detection and correction in storage systems that tend to mask small errors in disk data and obscure the relationship between small data errors and drive failures.</p>
 <ol style="list-style-type: decimal">
-<li>Block error correction on the disk. Disk data is written with error correcting coding that repairs small errors when reading data sectors.<br />
+<li>Block error correction on the disk. Disk data is written with error correcting coding that can repair small errors when reading data sectors.<br />
 </li>
-<li>Bad block remapping in disk controllers. Smart disk controllers can take unreliable sectors out of service, replacing them with more reliable sectors from a pool of spares.<br />
+<li>Bad block remapping in disk controllers. Smart disk controllers can take unreliable sectors out of service, replacing them with more reliable sectors from a pool of spares. Such remapping is usually transparent to most software.<br />
 </li>
 <li>RAID and similar redundant recording of sector data. Sector data may be recorded redundantly in mirror sets, or recorded partially in multiple versions using parity techniques, and so forth.</li>
 </ol>
-<p>The use of any or all of these techniques makes it very difficult to assess the relationship between drive failure statistics and block level errors.</p>
+<p>The use of any or all of these techniques makes it very difficult to assess the relationship between drive failure statistics and block level errors. Small correlations have been found between S.M.A.R.T. error reporting statistics and subsequent drive failures, but there is no clear causal connection. [cite Wikipedia article on S.M.A.R.T.]</p>
+<p>It must be stressed at this point that RAID and similar techniques protect only against <em>drive</em> failure; they do not protect against bad bits, blocks, or tracks when reading from a drive. If a disk drive fails completely, RAID and erasure code techniques can rebuild the data on that drive from redundant data stored on other drives. However, while a drive is still in operation, individual bad blocks on a drive will still read as bad blocks until the drive is removed from service and its data recovered, if possible, from the remaining drives in the redundancy set. The data on a disk drive, even in a redundancy set, can deteriorate incrementally over time and cause documents (in our case documents, but files in general) to be altered badly. If deteriorated data cannot be repaired by block error correction techniques in the disk controller, then the data of the file or document may be permanently lost or corrupted.</p>
+<p>The rate of deterioration of data is not directly related to the lifetime of the disk drive itself. Drive failure may result from failures in the mechanisms of moving parts, the controller electronics, circuit boards, connectors, etc. Data errors may result from surface wear, chemistry, radiation, lubrication, magnetic interference, and so forth, none of which seems very clearly related to the major causes of drive failure. (Physical contamination from airborne dust, chemicals, or humidity may be an exception.)</p>
 <h3 id="lifetime-expressed-as-half-life">Lifetime Expressed as Half-Life</h3>
 <p>Also, we have chosen to use the half-life of objects (sectors, servers) rather than the more common mean exponential lifetime used in most statistical forumalas. Mean lifetime is a good statistical measure, but not intuitive to the non-expert. &quot;By the end of an MTTF period, approximately 63% of the units will have failed&quot; is not easily understood by most non-statisticians. (If we assume Poisson arrivals, the probability of failure in one average lifetime is (1-1/e).) We have chosen for all simulations and tables of results to express lifetime instead as half-life. &quot;By the end of a half-life period, approximately half of the units will have failed&quot; is easier to understand, and should be familiar to most people from examples of radioactive decay.</p>
 <p>(END OF HAND-WAVING, AT LEAST ON THIS TOPIC)</p>
@@ -200,16 +203,6 @@ end of outline area -->
 <li>Failure data from warranty failures returned during a service period. This may be assessed by the manufacturer or by users of large numbers of devices.</li>
 </ol>
 <p>Even if we understood the source and accuracy of stated MTTF estimates for disk drives, we would still not have information about individual sector failures within a drive that cause document failures, nor the relative frequencies of sector failures versus drive failures.</p>
-<p>(CONTINUING MTBF OUTLINE)</p>
-<ul>
-<li><p>Four ways of measuring</p>
-<ul>
-<li>a guess based on engineering characteristics</li>
-<li>collection of failure data from returned drives during service-period</li>
-<li>accelerated life testing</li>
-<li>observed failures in a large collection (such as backblaze)</li>
-</ul></li>
-</ul>
 <p>(RBL: I don't feel comfortable writing any of the next several sections.)</p>
 <ul>
 <li><p>Limitations</p>
@@ -711,16 +704,29 @@ end outline -->
 </ul>
 <h2 id="how-to-model-various-scenarios">How to Model Various Scenarios</h2>
 <!-- START:TODO:RICK-->
+<p>Most of the following scenarios may be accomplished by changing some of the easily available simulation parameters and regenerating the instruction database for the set of runs. In some cases, multiple simulation runs will be necessary to generate data for hybrid situations, such as protecting multiple collections with different retention or preservation requirements, e.g., ephemera versus important historical records; or the use of multiple storage services with different quality guarantees, i.e., different error rates.</p>
+<p>For example, if I have a small collection that requires high safety and a large collection that does not, I can do separate runs with higher or lower lifetime values and more or fewer copies, and combine the results later in tables or graphics.</p>
 <ul>
-<li><p>The simplest case: one collection of documents, one document size, servers all same quality, where &quot;quality&quot; is mean sector lifetime.</p></li>
-<li><p>Several collections of varying preservation requirements.</p></li>
-<li><p>Using a number of servers of varying quality, where quality is mean sector lifetime.</p></li>
-<li><p>Varying collection size</p></li>
-<li><p>Varying document size</p></li>
-<li><p>Varying the duration of simulated time</p></li>
-<li><p>Varying server quality</p></li>
-<li><p>Collections with several document sizes</p></li>
+<li><p>The simplest case: one collection of documents, one document size, servers all same quality, where &quot;quality&quot; is mean sector lifetime. Generate instructions from the distributed *.ins files and select the run parameters you wish in the broker's CLI interface.</p></li>
+<li><p>Several collections of varying preservation requirements. This scenario requires a combination of runs using different server lifetime values. See the section on varying server quality.</p></li>
+<li><p>Varying collection size: Change the parameter count in the clients.csv file. This parameter is not settable in the specific instructions for a run, but applies to all runs in a specific set.</p></li>
+</ul>
+<blockquote>
+<p>NOTE WELL: The size of a collection is not often relevant to the simulation results. In almost all cases, we are interested in the <em>proportion</em> of failures of documents, and the size of the collection is used only to probe significant digits for very small numbers of failures. That is, the proportion of document losses is the same in a collection of 1,000 and a collection of 1,000,000; however, the results for the larger collection should give more insight into small numbers of losses in the areas of long lifetimes (=low error rates).</p>
+</blockquote>
+<blockquote>
+<p>NOTE: The CSV files for the simulations hold global parameters for the ru ns. Most, but not all, of the parameters in the CSV files can be overridden in the instruction database for the broker. It is possible to have two CSV files for a simulation run, one in the so-called &quot;familydir&quot; and one in the &quot;specificdir&quot;. The file in the specificdir, if present, overrides the file in the familydir, which in turn overrides the compiled-in default values for various parameters. If possible, make run-specific changes in the specificdir copy of the CSV file.</p>
+</blockquote>
+<blockquote>
+<p>Also note that varying collection size may be combined with varying preservation requirements and varying server quality.</p>
+</blockquote>
+<ul>
+<li><p>Varying document size: Change the parameter nDocSize in the file docsize.ins. Currently the only value not commented out is 50 MB. For most purposes, it is best to use only one document size in a set of simulation runs, so only one un-commented-out value should be present in this file.</p></li>
+<li><p>Varying the duration of simulated time: Change the parameter nSimlen in the file simlen.ins. The current value is 100,000, which is ten metric years.</p></li>
+<li><p>Varying server quality: Change the values in the nLifem parameter list in the lifem.ins file. The list includes a wide range of values to be placed in the instruction database. The value or values used for a simulation run is specified in the --lifem option of the broker CLI. A single run may specify one particular value or a range of values to be chosen from the list.</p></li>
+<li><p>Collections with several document sizes:</p></li>
 <li><p>One collection stored on several servers of different quality</p></li>
+<li><p>Varying numbers of copies made:</p></li>
 <li><p>No auditing</p></li>
 <li><p>Simple annual total auditing</p></li>
 <li><p>Annual total auditing segmented semiannually, quarterly, monthly</p></li>
